feat: add turning home button

--- a/bao-viet-nhan-tho-ra-mat-sieu-pham-bao-ve-len-toi-1-trieu-do-la-my.html
+++ b/bao-viet-nhan-tho-ra-mat-sieu-pham-bao-ve-len-toi-1-trieu-do-la-my.html
@@ -22,7 +22,8 @@
     </button>
   </div>
   <nav class="head-wrapper">
-    <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
+    <img onclick="window.location.href='/index.html'" class="logo"
+      src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
