--- a/bao-viet-tu-hao-hanh-trinh-60-nam-giu-tron-niem-tin.html
+++ b/bao-viet-tu-hao-hanh-trinh-60-nam-giu-tron-niem-tin.html
@@ -22,7 +22,8 @@
     </button>
   </div>
   <nav class="head-wrapper">
-    <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
+    <img onclick="window.location.href='/index.html'" class="logo"
+      src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
