--- a/baoviet-group-bvh-only-insurance-company-vietnam-first-time-been-ranked-fortune-southeast-asia-500.html
+++ b/baoviet-group-bvh-only-insurance-company-vietnam-first-time-been-ranked-fortune-southeast-asia-500.html
@@ -22,7 +22,8 @@
     </button>
   </div>
   <nav class="head-wrapper">
-    <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
+    <img onclick="window.location.href='/index.html'" class="logo"
+      src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
