--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </button>
   </div>
   <div class="float-container">
-    <button onclick="window.location.href='tel:+8490549949'" id="floatBtn" class="floating-btn">
+    <button onclick="window.location.href='tel:+84905499496'" id="floatBtn" class="floating-btn">
       <img src="https://icon-library.com/images/phone-white-icon/phone-white-icon-5.jpg"
         style="width: 30px; height: 30px;" alt="" srcset="">
     </button>
@@ -33,7 +33,8 @@
   </div>
 
   <nav class="head-wrapper">
-    <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
+    <img onclick="window.location.href='/index.html'" class="logo"
+      src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
@@ -138,7 +139,8 @@
           </p>
         </div>
       </div>
-      <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng"
+      <img onclick="window.location.href='/index.html'" class="logo"
+        src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng"
         style="position: absolute; top: 10px; left: 10px;">
       <img
         style="position: absolute; bottom: -80px; right: -80px; width: 200px; height: 200px; opacity: 0.5; z-index: 0;"
