fix: image slider

--- a/index.html
+++ b/index.html
@@ -82,16 +82,19 @@
   </nav>
 
 
-  <div class="slider">
-    <div class="slides">
-      <div class="slide"
-        style="background-image: url(https://media.thuonghieucongluan.vn/uploads/2024/06/24/anh02-1719198723.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      </div>
-      <div class="slide"
-        style="background-image: url(https://media.thuonghieucongluan.vn/uploads/2024/06/24/anh02-1719198723.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      </div>
-      <div class="slide"
-        style="background-image: url(https://media.thuonghieucongluan.vn/uploads/2024/06/24/anh02-1719198723.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
+  <div class="container-list">
+    <div class="slider">
+      <div class="slides">
+        <div class="slide">
+          <img style="width: 100%;" src="assets/bao-60-nam-1-113944_87-121522.webp" alt="">
+        </div>
+        <div class="slide">
+          <img style="width: 100%;" src="assets/top-5-forbers.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img style="width: 100%;"
+            src="assets/bao-hiem-bao-viet-60-nam-dan-dau-trong-su-menh-bao-ve-cuoc-song-viet-20241217180618.jpg" alt="">
+        </div>
       </div>
     </div>
   </div>
